# NotePadMiddleware

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml  python-package.yml
examples/: README.md  demo.py
src/langchain_middleware_notepad/: __init__.py  middleware.py  state.py  tools.py
tests/: test_middleware.py  test_tools.py
