[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-notepad-middleware"
version = "0.1.0"
description = "A LangChain agent middleware that provides a plain-text scratchpad/notepad."
readme = "README.md"
authors = [
  { name = "Antigravity", email = "antigravity@example.com" },
]
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain>=0.3.0",
    "langgraph",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_middleware_notepad"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
