[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-notepad-middleware"
version = "0.1.0"
description = "A LangChain agent middleware that provides a plain-text scratchpad/notepad."
readme = "README.md"
authors = [
{ name = "Izzet Sezer", email = "[sezer@imsezer.com](mailto:sezer@imsezer.com)" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
]
dependencies = [
"langchain>=0.3.0",
"langgraph",
]

[project.optional-dependencies]
dev = [
"pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
