[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-notepad-middleware"
version = "0.1.1"
description = "A LangChain agent middleware that provides a plain-text scratchpad/notepad."
readme = "README.md"
keywords = ["langchain", "middleware", "notepad", "scratchpad", "agent"]
authors = [
{ name = "Izzet Sezer", email = "sezer@imsezer.com" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
"Development Status :: 4 - Beta",
"Intended Audience :: Developers",
"Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/izzet-sezer/NotePadMiddleware"
Repository = "https://github.com/izzet-sezer/NotePadMiddleware"
Issues = "https://github.com/izzet-sezer/NotePadMiddleware/issues"

[project.optional-dependencies]
dev = [
"pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
